--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,8 +24,8 @@
     </string-array>
 
     <string-array name="ABIERTAOCERRADA">
-        <item>A</item>
-        <item>C</item>
+        <item>Abierta</item>
+        <item>Cerrada</item>
     </string-array>
 
 </resources>
