9/12/2022 Avances validando variables

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
 
 
     <string-array name="UNIDADES">
+        <item>Seleccionar</item>
         <item>KG</item>
         <item>G</item>
         <item>M</item>
