--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,8 @@
         <item>Cerrada</item>
     </string-array>
 
+    <string-array name="material">
+        <item>Seleccionar</item>
+    </string-array>
+
 </resources>
